# ohtumini_ryhma7

./: .coverage  .coveragerc  .env  .env.test  .env_base  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
src/: .env_base  AppLibrary.py  app.py  build.py  data.json  db.py  init_db.py  routes.py
src/bibtex_generator/: bibtex_generator.py
src/citation_class/: citation.py  citation_template.py
src/db/: db.py  get_db_filepath.py  init_db.py  schema.sql
src/doi/: citation_by_doi.py  get_content.py
src/entities/: citation.py  types.py
src/forms/: add_citation_form.py  citation_form.py
src/repositories/: citation_repository.py  search_citation_repository.py
src/services/: citation_service.py
src/static/: style.css
src/templates/: add.html  book.html  citations.html  entrytypecitation.html  index.html  login.html  newcitation.html  register.html
src/tests/: app_test.py  bibtex_generator_test.py  book_page.robot  citatation_template_test.py  citation_by_doi.robot  citation_by_doi_test.py  citation_page.robot  citation_repository_test.py  citation_service_test.py  citation_validation_test.py  citations_bib.robot  dummy_page.html  dummy_page_article.html  dummyarticle.json  dummyarticle2.json  dummybook.json  dummyinbook.json  dummyinproceedings.json  dummyproceedings.json  dummytechreport.json  dummythesis.json  form_input_resource.robot  main_page.robot  newcitation_page.robot  resource.robot  robot_test_env.py
