[tool.poetry]
name = "harmaa"
version = "0.1.0"
description = ""
authors = ["kodtld <kodu@live.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
