[tool.poetry]
name = "harmaa"
version = "0.1.0"
description = ""
authors = ["kodtld <kodu@live.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
flask-wtf = "^1.0.1"
wtforms = "^3.0.1"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
pytest = "^7.2.0"
coverage = "^6.5.0"
robotframework = "^6.0.1"
robotframework-seleniumlibrary = "^6.0.0"
requests = "^2.28.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
